# compiler

./: .gitignore  Cargo.toml  README.md  convertBinToASCIIBin.py  index.asm  index.c  myCPU.java
.github/workflows/: release.yml
args/: Cargo.toml
args/src/: lib.rs
assembler/: Cargo.toml
assembler/src/: assembler.rs  bin_generator.rs  delimiter.rs  instruction.rs  lib.rs  main.rs  parser.rs  preprocessor.rs  semantic_analyzer.rs  writer.rs
assembler/src/encoder/: mod.rs
assembler/src/lexer/: mod.rs  token.rs
assembler/src/parser/: mod.rs  render_error.rs
assembler/src/parser/instruction/: mod.rs
assembler/src/parser/semantic_parser/: mod.rs
assembler/src/parser/syntactic_parser/: mod.rs
assembler/src/writer/: mod.rs
cpu/: Cargo.toml
cpu/src/: cpu.rs  handler.rs  instruction.rs  lib.rs  main.rs  memory.rs  register.rs
examples/: fact.asm  forward_reference.asm  index.asm  routines.asm
isa/: Cargo.toml
isa/src/: lib.rs
logger/: Cargo.toml
logger/src/: lib.rs
src/assembler/: MyAssembler.java
src/cpu/: MyCPU.java
visualizer/: package-lock.json  package.json
visualizer/src/: App.tsx
visualizer/src/components/: AssemblyEditor.tsx  CPUStateDisplay.tsx  ControlPanel.tsx  MemoryGrid.tsx  MemoryViewer.tsx
visualizer/src/lib/: mock-cpu-emulator.ts  wasm-cpu-emulator.ts
visualizer/src/lib/wasm-cpu/: package.json  wasm_wrapper.d.ts  wasm_wrapper.js  wasm_wrapper_bg.wasm.d.ts
visualizer/src/types/: cpu.ts
vm/: Cargo.toml
vm/src/: handler.rs  instruction.rs  lib.rs  main.rs
wasm-wrapper/: Cargo.toml
wasm-wrapper/src/: lib.rs
