[package]
name = "wasm-wrapper"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = "1.0"
serde-wasm-bindgen = "0.6"
cpu = { path = "../cpu" }
assembler = { path = "../assembler" }
args = { path = "../args" }
console_error_panic_hook = "0.1.7"
